<resources>
    <string name="app_name">My Application</string>
    <string name="panther">Panther</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="username_or_email">Username or Email</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select user</string>
    <string name="online">Online</string>
    <string name="search">Search...</string>
</resources>