<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:background="@drawable/signup_background"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Create New Account"
            android:fontFamily="@font/dancingscript"
            android:textColor="@color/primary"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold" />
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_profile"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>
            <TextView
                android:id="@+id/txtAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:layout_gravity="center"
                android:textColor="@color/secondary"/>
        </FrameLayout>
        <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp">
        </EditText>
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="Password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp">
        </EditText>
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp">
        </EditText>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/secondary"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>