<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:background="@drawable/signup_background"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/panther"
            android:fontFamily="@font/dancingscript"
            android:textColor="@color/primary"
            android:textSize="@dimen/_32sdp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp">
        </EditText>
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="Password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp">
        </EditText>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/_20sdp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center">
            </ProgressBar>
        </FrameLayout>
        <TextView
            android:id="@+id/txtCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/secondary"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>